--- a/dialog.html
+++ b/dialog.html
@@ -13,7 +13,7 @@
         <div class="input-group">
             <input type="text" name="post_thumbnail" class="form-control" value="" id="post_thumbnail">
             <span class="input-group-btn">
-                <a  target="_blank" class="btn btn-default" id="media-1699340363-704" href="http://www.mfehaber.com/app/plugins/default/media/filemanager/dialog.php?type=0&amp;field_id=post_thumbnail"><i class="fa fa-file"></i></a>
+                <a  target="_blank" class="btn btn-default" id="media-1699340363-704" href="filemanager/dialog.php?type=0&amp;field_id=post_thumbnail"><i class="fa fa-file"></i></a>
             </span>
         </div>
 </div>
